workspace: use frameGeometry for findWindowToActivate

Previously hitTest was used. It relied on inputRegion, and was
unreliable because inputRegion only updates after a virtual desktop
switch is complete.

BUG: 500529